--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-jest": "^26.1.0",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.5.0",
     "jest": "^26.1.0",
     "jest-canvas-mock": "^2.2.0",
     "json-loader": "^0.5.7",
